--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,40 +1,19 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}{%block title %}{{user.username}}'s Profile{% endblock %}
+{% block content %}
+<h1>{{user.username}}'s Profile</h1>
+<p>Username: {{user.username}}</p>
+<p>Email: {{user.email}}</p>
+<a href="/users">Users</a>
 
-<head>
-    <title>{{user.username}}'s Profile</title>
-</head>
+<h2>Plants</h2>
+{% if user.plants %}
+<ul>
+    {% for plant in user.plants %}
+    <li><a href="/plant/{{plant._id}}"> {{ plant.name }} the {{plant.species.name}}</a></li>
+    {% endfor %}
+</ul>
+{% else %}
+<p>This user has no plants.</p>
+{% endif %}
 
-<body>
-    <h1>{{user.username}}'s Profile</h1>
-    <p>Username: {{user.username}}</p>
-    <p>Email: {{user.email}}</p>
-    <a href="/users">Users</a>
-
-    <h2>Plants</h2>
-    {% if user.plants %}
-    <ul>
-        {% for plant in user.plants %}
-        <li><a href="/plant/{{plant._id}}"> {{ plant.name }} the {{plant.species.name}}</a></li>
-        {% endfor %}
-    </ul>
-    {% else %}
-    <p>This user has no plants.</p>
-    {% endif %}
-    <h3>Add a plant</h3>
-    <form action="/create_plant" method="post">
-        <label for="plant_name">Name</label>
-        <input type="text" name="plant_name" id="plant_name">
-        <label for="species">Species</label>
-        <select name="species" id="species">
-            {% for species in species %}
-            <option value="{{species._id}}">{{species.name}}</option>
-            {% endfor %}
-        </select>
-        <input type="hidden" value="{{user._id}}" name="user_id" id="user_id">
-        <input type="hidden" value="{{user.username}}" name="username" id="username">
-
-        <input type="submit" value="Add Plant">
-</body>
-
-</html>
+{% endblock %}
