--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Login</title>
-</head>
+{% extends "base.html" %}
 
-<body>
-    <h1>Login</h1>
-    <form action="/login" method="post">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password">
-        <input type="submit" value="Login">
-    </form>
-</body>
+{% block title %}Login{% endblock %}
 
-</html>
+{% block content %}
+<h1>Login</h1>
+<form action="/login" method="post">
+    <label for="username">Username</label>
+    <input type="text" name="username" id="username">
+    <label for="password">Password</label>
+    <input type="password" name="password" id="password">
+    <input type="submit" value="Login">
+</form>
+{% endblock %}
