--- a/templates/users.html
+++ b/templates/users.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
 
-<head>
-    <title>Users</title>
-</head>
+{% block title %}Users{% endblock %}
 
-<body>
-    <h1>Users</h1>
-    <ul>
-        {% for user in users %}
-        <li><a href="profile/{{user.username}}">{{ user.username }}</a></li>
-        {% endfor %}
-    </ul>
-</body>
-
-</html>
+{% block content %}
+<h1>Users</h1>
+<ul>
+    {% for user in users %}
+    <li><a href="profile/{{user.username}}">{{ user.username }}</a></li>
+    {% endfor %}
+</ul>
+{% endblock %}
