fixed my_profile template

--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -34,6 +34,4 @@ My profile
     <input type="hidden" value="{{user.username}}" name="username" id="username">
 
     <input type="submit" value="Add Plant">
-    </body>
-
-    </html>
+    {% endblock %}
