--- a/templates/plant.html
+++ b/templates/plant.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
+{% block title %}{{plant.name}}'s page{% endblock %}
+{% block content %}
 
-<head>
-    <title>{{plant.name}}'s page</title>
-</head>
-
-<body>
-    <h1>{{plant.name}}'s page</h1>
-    <p>{{plant.name}} is a {{plant.species.name}}.
-    </p>
-    <p>It needs watering every {{plant.watering_frequency}} days.</p>
-
-
-</html>
+<h1>{{plant.name}}'s page</h1>
+<p>{{plant.name}} is a {{plant.species.name}}.
+</p>
+<p>It needs watering every {{plant.watering_frequency}} days.</p>
+{% endblock %}
