--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <h1>Login</h1>
-<form action="/login" method="post">
+<form action="/user/login" method="post">
     <label for="username">Username</label>
     <input type="text" name="username" id="username">
     <label for="password">Password</label>
