--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 <h1>Plant App</h1>
 <p>Some day, a home page...</p>
-<a href="{{ url_for('users') }}">Users</a>
+<a href="{{ url_for('user_app.users') }}">Users</a>
 
 {% endblock %}
